Portfolio - adjust left/right arrows to be full height, make sure that the big arrow hit sections don't cover the bottom thumbnails in the lower left/lower right areas (z-indexing all the things)

--- a/wp-content/themes/hmr-theme/assets/css/less/app.less
+++ b/wp-content/themes/hmr-theme/assets/css/less/app.less
@@ -774,11 +774,11 @@ ul.fullsize {
 	position:absolute;
 	bottom:80px;
 	width:100%;
-	z-index:200;
+	z-index:301;
 	left: 50%;
 	margin-left: -426px !important; //Center the thumbnail scroller. ugh.
 	.bx-viewport {
-		z-index:201;
+		z-index:302;
 		height:47px !important; // ugh.
 		padding:4px 0;
 	}
@@ -852,13 +852,12 @@ ul.fullsize {
 
 .big_arrow {
 	width:50px;
-	height:70px;
+	height:100%;
 	position:absolute;
 	z-index:300;
 	cursor:pointer;
-	top:50%;
-	margin-top:-210px;
-	padding:140px 0;
+	top:0;
+	bottom:0;
 	.opacity(0);
 	.transition(.5s);
 	&.left {
